--- a/xss2.yaml
+++ b/xss2.yaml
@@ -2,4 +2,4 @@ swagger: '2.0'
 info:
   title: your system got hacked
   description: |
-    <script\x0Atype="text/javascript">javascript:alert(1);</script>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/You_Have_Been_Hacked!.jpg">
